= {project-name} Changelog
:project-name: Asciidoctor PDF
:url-repo: https://github.com/asciidoctor/asciidoctor-pdf

This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

_No changes since previous release._

== 2.1.5 (2022-07-10) - @mojavelinux

Bug Fixes::

* fix position of background color on caption with outside margin (#2271)
* don't allow font scale to compound when entering nested table (#2276)

=== Details

{url-repo}/releases/tag/v2.1.5[git tag] | {url-repo}/compare/v2.1.4\...v2.1.5[full diff]

== 2.1.4 (2022-06-26) - @mojavelinux

Improvements::

* include source location in warning message for truncated table cell if sourcemap is enabled (#2261)

Bug Fixes::

* allow alt text for block image, video, and audio to wrap to next line on same page (#2258)
* apply text-tranform from custom role on phrase after attributes have been resolved (#2263)
* make URL check more strict so image target containing a colon is not mistaken as a URL

=== Details

{url-repo}/releases/tag/v2.1.4[git tag] | {url-repo}/compare/v2.1.3\...v2.1.4[full diff]

== 2.1.3 (2022-06-23) - @mojavelinux

Bug Fixes::

* interpret `start-at` theme keys with value `1` correctly (as `1` instead of `2`) (#2255)
* restore column layout after importing page(s) from PDF (#2253)
* fix crash when border color is transparent (`thematic-break-border-color`, `admonition-column-rule`, `quote-border-color`, `verse-border-color`)
* ensure page margin is restored after imported page

=== Details

{url-repo}/releases/tag/v2.1.3[git tag] | {url-repo}/compare/v2.1.2\...v2.1.3[full diff]

== 2.1.2 (2022-06-17) - @mojavelinux

Bug Fixes::

* apply page layout from main document to new page in scratch document (#2248)
* use correct logic to insert page before TOC with automatic placement when doctype=book and media=prepress