@@ -7,7 +7,9 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 
 == Unreleased
 
-_No changes since previous release._
+Bug Fixes::
+
+* resolve font size for monospaced cell when font size value on `codespan` key in theme is relative (#2281)
 
 == 2.1.5 (2022-07-10) - @mojavelinux
 
